# essentia-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  release.yml
essentia/: Cargo.toml  build.rs
essentia/src/: error.rs  essentia.rs  lib.rs
essentia/src/algorithm/: error.rs  mod.rs
essentia_codegen/: Cargo.toml
essentia_codegen/src/: lib.rs
essentia_codegen/src/algorithm_generation/: common.rs  compute_function.rs  mod.rs  output_functions.rs  parameter_functions.rs
essentia_codegen/src/module_generation/: category_module.rs  main_module.rs  mod.rs
essentia_core/: Cargo.toml  build.rs
essentia_core/bridge/: algorithm.h  algorithm_core.cpp  algorithm_input_set.cpp  algorithm_metadata.cpp  algorithm_output_get.cpp  algorithm_output_setup.cpp  bridge.cpp  bridge.h  parameter_map.cpp  parameter_map.h
essentia_core/bridge/algorithm_bridge/: algorithm_bridge.h  core.cpp  input_output.cpp  introspection.cpp
essentia_core/bridge/common/: type_mapping.cpp
essentia_core/bridge/parameter_map_bridge/: parameter_map_bridge.cpp  parameter_map_bridge.h
essentia_core/bridge/variant_data/: accessors.cpp  constructors.cpp  introspection.cpp  variant_data.h
essentia_core/src/: error.rs  essentia.rs  ffi.rs  input_value.rs  lib.rs  output_value.rs  parameter_map.rs
essentia_core/src/algorithm/: algorithm.rs  error.rs  introspection.rs  mod.rs
essentia_core/src/data/: constraints.rs  container.rs  conversion_error.rs  conversion_get.rs  conversion_into.rs  mod.rs  types.rs
essentia_core/src/data_container/: data_container.rs  data_type.rs  data_type_enum.rs  error.rs  get_trait.rs  into_trait.rs  mod.rs  test.rs  variants.rs
essentia_core/src/essentia/: error.rs  essentia.rs  mod.rs
essentia_core/src/input_output/: input_output_trait.rs  input_output_type.rs  mod.rs
essentia_core/src/parameter/: mod.rs  parameter_map.rs  parameter_trait.rs  parameter_type.rs
essentia_core/src/parameter_map/: mod.rs  parameter_map.rs
essentia_core/src/pool/: error.rs  mod.rs  pool.rs  pool_data.rs  pool_data_type.rs  test.rs  tests.rs
essentia_core/src/pool_data/: mod.rs  pool_data_trait.rs  pool_data_type.rs
essentia_core/src/variant_data/: data_type.rs  from_other.rs  into_other.rs  mod.rs  tests.rs  variants.rs
essentia_main/: Cargo.toml
essentia_main/src/: main.rs
essentia_sys/: Cargo.toml  build.rs
essentia_sys/bridge/: bridge.h
essentia_sys/bridge/algorithm_bridge/: algorithm_bridge.h  core.cpp  input_output.cpp  introspection.cpp
essentia_sys/bridge/common/: type_mapping.cpp  type_mapping.h
essentia_sys/bridge/data_container/: accessors.cpp  constructors.cpp  data_container.h  introspection.cpp
essentia_sys/bridge/parameter_map_bridge/: parameter_map_bridge.cpp  parameter_map_bridge.h
essentia_sys/bridge/pool_bridge/: pool_bridge.cpp  pool_bridge.h
essentia_sys/bridge/variant_data/: accessors.cpp  constructors.cpp  introspection.cpp  variant_data.h
essentia_sys/src/: lib.rs
