[package]
name = "essentia"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Idiomatic Rust wrapper for the Essentia audio analysis library 🎶🦀"
repository = "https://github.com/lagmoellertim/essentia-rs"
documentation = "https://docs.rs/crate/essentia"
authors = ["Tim-Luca Lagmöller <mail@lagmoellertim.de>"]
keywords = ["audio", "ffi", "essentia", "signal-processing"]
categories = ["api-bindings", "multimedia::audio"]
readme = "../README.md"

[dependencies]
cxx = "1.0.160"
essentia-core = { path = "../essentia_core", version = "=0.1.4"}
thiserror = "2.0.12"

[build-dependencies]
essentia-codegen = { path = "../essentia_codegen", version = "=0.1.4" }
