[package]
name = "essentia-codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Code generation utilities for Essentia Rust bindings"
repository = "https://github.com/lagmoellertim/essentia-rs"
authors = ["Tim-Luca Lagmöller <mail@lagmoellertim.de>"]
keywords = ["audio", "ffi", "essentia", "signal-processing"]
categories = ["api-bindings", "multimedia::audio"]
readme = "../README.md"

[dependencies]
prettyplease = "0.2.35"
quote = "1.0.40"
syn = "2.0.104"
essentia-core = { path = "../essentia_core", version = "=0.1.0"}
convert_case = "0.8.0"
regex = "1.11.1"
proc-macro2 = "1.0.95"
textwrap = "0.16.2"
