[package]
name = "essentia-core"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Core Rust library wrapping Essentia functionality"
repository = "https://github.com/lagmoellertim/essentia-rs"
documentation = "https://docs.rs/crate/essentia-core"
authors = ["Tim-Luca Lagmöller <mail@lagmoellertim.de>"]
keywords = ["audio", "ffi", "essentia", "signal-processing"]
categories = ["api-bindings", "multimedia::audio"]
readme = "../README.md"

[dependencies]
cxx = "1.0.160"
essentia-sys = { path = "../essentia_sys", version = "=0.1.2"}
ndarray = "0.16.1"
num = "0.4"
once_cell = "1.21.3"
thiserror = "2.0.12"
