[package]
name = "essentia-sys"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust FFI bindings and bridge for the Essentia library"
repository = "https://github.com/lagmoellertim/essentia-rs"
authors = ["Tim-Luca Lagmöller <mail@lagmoellertim.de>"]
keywords = ["audio", "ffi", "essentia", "signal-processing"]
categories = ["api-bindings", "multimedia::audio"]
readme = "../README.md"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"
